Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/analyzer/AnalyzersCheckSourceLevel.out
AnalyzersCheckSourceLevel.java:11:37: compiler.warn.potential.lambda.found
- compiler.err.warnings.and.werror
1 error
1 warning
